# coursework

./: .env  .gitignore  README.md  pyproject.toml  user_settings.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_reports.py  test_services.py  test_utils.py  test_views.py
